--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,162 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,500;1,700&family=Ubuntu:wght@300;400;500;700&display=swap");
+
+/*common styles*/
+
+.transparent_block {
+  background: linear-gradient(
+    94.43deg,
+    rgba(249, 249, 249, 0.207) 34.95%,
+    rgba(249, 249, 249, 0.107) 67.01%
+  );
+
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.6px);
+  -webkit-backdrop-filter: blur(8.6px);
+  border: 1.2px solid rgba(255, 255, 255, 0.48);
+}
+
+.grd_btn {
+  background: linear-gradient(90deg, #ff594c 0%, #fac527 100%);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+/*common styles end*/
+
+/*section1 css*/
+.section1 {
+  /* background: rgba(21, 20, 20, 0.25); */
+  background-image: url("https://res.cloudinary.com/aditya-college-of-engineering-technology/image/upload/v1656224771/pexels-vecislavas-popa-1571460_1_larnx4.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  margin-bottom: -50px;
+}
+.overlay1 {
+  height: inherit;
+  width: inherit;
+  background: rgba(21, 20, 20, 0.25);
+  padding-bottom: 50px;
+}
+.headernav {
+  /* display: grid;
+  grid-template-columns: repeat(2, 6fr); */
+}
+.logo {
+  grid-column: 1/6;
+  justify-self: center;
+  align-self: center;
+  font-size: 2.5rem;
+  font-family: "Dancing Script", cursive;
+  color: #fff;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navmenu {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  grid-column: 7/12;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+}
+.navmenu button {
+  background-color: transparent;
+  border: solid 1px #fff;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 20px;
+}
+header {
+  margin-top: 10rem;
+  text-align: center;
+  font-family: "Exo 2", sans-serif;
+  color: #fff;
+}
+header h1 {
+  font-weight: 700;
+  font-size: 7vw;
+}
+header h4 {
+  font-family: "Ubuntu";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.searchOptions {
+  width: 70%;
+  padding: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchOptions button {
+  background: linear-gradient(90deg, #ff594c 0%, #fac527 100%);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: #fff;
 }
+/*section1 css end*/
+.subsecbody {
+  margin: 3vw 6vw;
+}
+/*section2 css*/
+.subsechead {
+  font-family: "Exo 2", sans-serif;
+  color: rgb(2, 0, 0);
+  font-size: 30px;
+  font-weight: 700;
+}
+/*section2 css end*/
+
+/*section3 css*/
+
+/*section3 css end*/
+
+/*footer css*/
+.footernav {
+  display: grid;
+  grid-template-columns: repeat(2, 6fr);
+  color: #000000;
+}
+.footernav div {
+  color: #000000;
+}
+
+.footerlogo {
+  grid-column: 1/1;
+  justify-self: center;
+  align-self: center;
+  font-size: 2.5rem;
+  font-family: "Dancing Script", cursive;
+  color: #fff;
+  text-align: center;
+}
+.footernavmenu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  grid-column: 2/2;
+
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+}
+.footernavmenu button {
+  background-color: transparent;
+  border: solid 1px #fff;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 20px;
+}
+/*section4 css end*/
