--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,6 @@
 .grd_btn {
   background: linear-gradient(90deg, #ff594c 0%, #fac527 100%);
   border: none;
-  padding: 10px;
-  border-radius: 5px;
 }
 /*common styles end*/
 
@@ -32,7 +30,15 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  margin-bottom: -50px;
+  margin-bottom: -60px;
+}
+
+.wavyDiv {
+  background-image: url("https://res.cloudinary.com/aditya-college-of-engineering-technology/image/upload/v1656278864/Vector_jnvsar.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 15vh;
 }
 .overlay1 {
   height: inherit;
@@ -46,12 +52,11 @@
 }
 .logo {
   grid-column: 1/6;
-  justify-self: center;
+  margin: 1vw 6vw;
   align-self: center;
-  font-size: 2.5rem;
+  font-size: 45px;
   font-family: "Dancing Script", cursive;
   color: #fff;
-  text-align: center;
 }
 .navmenu {
   display: flex;
@@ -64,9 +69,21 @@
   font-size: 20px;
   color: #fff;
 }
+.menuicon {
+  grid-column: 12/12;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-items: center;
+  display: none;
+}
 .navmenu button {
   background-color: transparent;
   border: solid 1px #fff;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
   color: #fff;
   border-radius: 5px;
   padding: 5px 20px;
@@ -79,7 +96,7 @@ header {
 }
 header h1 {
   font-weight: 700;
-  font-size: 7vw;
+  font-size: 100px;
 }
 header h4 {
   font-family: "Ubuntu";
@@ -89,21 +106,38 @@ header h4 {
 }
 
 .searchOptions {
-  width: 70%;
-  padding: 25px;
+  width: 80%;
+  padding: 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 2rem;
 }
 
-.searchOptions button {
+.srcbutton {
+  padding: 2px 10px;
   background: linear-gradient(90deg, #ff594c 0%, #fac527 100%);
   border: none;
-  padding: 10px;
+  font-size: 22px;
+  font-weight: 500;
   border-radius: 5px;
   color: #fff;
 }
+
+.searchoption {
+  font-size: 22px;
+  font-weight: 500;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 5px 15px;
+  color: #000000;
+}
+.searchoption p {
+  font-family: "Exo 2";
+  font-size: 16px;
+  margin: 0 0 10px 0;
+}
+
 /*section1 css end*/
 .subsecbody {
   margin: 3vw 6vw;
@@ -132,13 +166,12 @@ header h4 {
 }
 
 .footerlogo {
-  grid-column: 1/1;
-  justify-self: center;
+  grid-column: 1/6;
+
   align-self: center;
-  font-size: 2.5rem;
+  font-size: 45px;
   font-family: "Dancing Script", cursive;
   color: #fff;
-  text-align: center;
 }
 .footernavmenu {
   display: flex;
@@ -154,9 +187,72 @@ header h4 {
 }
 .footernavmenu button {
   background-color: transparent;
-  border: solid 1px #fff;
-  color: #fff;
+  border: solid 1px rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
   border-radius: 5px;
-  padding: 5px 20px;
+  padding: 10px 40px;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
 }
+
 /*section4 css end*/
+
+/*responsive styles*/
+@media only screen and (max-width: 1300px) {
+  .section1 {
+    margin-bottom: -50px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .section1 {
+    margin-bottom: -40px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .section1 {
+    margin-bottom: -35px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .section1 {
+    margin-bottom: -30px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .section1 {
+    margin-bottom: -25px;
+  }
+  .Hidewave {
+    display: none;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .Hidewave {
+    display: none;
+  }
+  .section1 {
+    margin-bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .Hidewave {
+    display: none;
+  }
+  .navmenu {
+    display: none;
+  }
+  .menuicon {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .logo {
+    font-size: 5vw;
+  }
+}
+/*responsive styles end*/
