--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,13 +1,46 @@
 .productCard {
 }
 .productCard__image {
-  margin-bottom: -3rem;
+  margin-bottom: -4rem;
+}
+.productCard__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 30px;
 }
 
 .productCard__info {
-  width: 60%;
+  width: 70%;
+  padding: 10px;
+}
+.productCard__info button {
+  border-radius: 7px;
+  padding: 1px;
 }
 
+.info-margin {
+  margin-left: 50px;
+}
+
+/*about card*/
+
+.aboutCard {
+}
 .aboutCard__info {
   width: 60%;
+  padding: 10px 30px;
+}
+
+.aboutCard__image {
+  width: 100%;
+  height: 80%;
+  margin-bottom: -3rem;
+}
+
+.aboutCard__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 30px;
 }
